--- a/b46d69020f.html
+++ b/b46d69020f.html
@@ -9,19 +9,19 @@
 <meta name="google" content="notranslate">
 
 <link rel="preconnect" href="https://cdnc.heyzine.com">
-<link rel="canonical" href="https://heyzine.com/flip-book/b46d69020f.html">
+<link rel="canonical" href="https://heyzine.com/flip-book/2245c4c595.html">
 
-<title>MENU</title>
+<title>Online MENU</title>
 <meta itemprop="name" content="Online Flipbook">
 <meta itemprop="description" content="Created with the Heyzine flipbook maker">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Online Flipbook">
 <meta property="og:description" content="Created with the Heyzine flipbook maker">
-<meta property="og:url" content="https://heyzine.com/flip-book/b46d69020f.html">
-<link rel="alternate" type="application/json+oembed" href="https://heyzine.com/api1/oembed?url=https%3A%2F%2Fheyzine.com%2Fflip-book%2Fb46d69020f.html&amp;format=json" title="Online Flipbook"><meta property="og:image" content="https://cdnc.heyzine.com/files/uploaded/b46d69020f206566fb79572476af28ae4355b672.pdf-thumb.jpg">
-<meta itemprop="image" content="https://cdnc.heyzine.com/files/uploaded/b46d69020f206566fb79572476af28ae4355b672.pdf-thumb.jpg">
+<meta property="og:url" content="https://heyzine.com/flip-book/2245c4c595.html">
+<link rel="alternate" type="application/json+oembed" href="https://heyzine.com/api1/oembed?url=https%3A%2F%2Fheyzine.com%2Fflip-book%2F2245c4c595.html&amp;format=json" title="Online Flipbook"><meta property="og:image" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
+<meta itemprop="image" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image:src" content="https://cdnc.heyzine.com/files/uploaded/b46d69020f206566fb79572476af28ae4355b672.pdf-thumb.jpg">
+<meta name="twitter:image:src" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
 <meta name="robots" content="index, nofollow">
 
 
@@ -38,27 +38,27 @@
 <script type="text/javascript">
     /*start-metadata*/
     var flipbookcfg={
-        "id": "aee77233c1812a54d45ca768acf7dc328b7835dd7",
+        "id": "f3336036ea06cd188f265642f587991f8cadea813",
         "app_name": "metadata-app-name",
         "app_ver": "1",
-        "name": "b46d69020f206566fb79572476af28ae4355b672.pdf",
-        "custom_name": "b46d69020f.html",
+        "name": "2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf",
+        "custom_name": "2245c4c595.html",
         "domain": "https:\/\/heyzine.com",
         "mode": "PDF",
-        "isize": 1.12827,
-        "width": 842,
-        "height": 596,
-        "size": "1617129",
+        "isize": 1.59396,
+        "width": 596,
+        "height": 843,
+        "size": "733668",
         "admin_key": "",
-        "url": "https:\/\/heyzine.com\/flip-book\/b46d69020f.html",
+        "url": "https:\/\/heyzine.com\/flip-book\/2245c4c595.html",
         "cover": 0,
-        "num_pages": 5,
+        "num_pages": 4,
         "viewer": "MAGAZINE",
-        "thumbnail": "b46d69020f206566fb79572476af28ae4355b672.pdf-thumb.jpg",
+        "thumbnail": "2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg",
         "stats": 0,
         "readerToken": null,
         "design": {
-            "type": "album",                     
+            "type": "magazine",                     
             "background": "https:\/\/cdnc.heyzine.com\/files\/backgrounds\/back5.svg",
             "background_color": null,
             "background_style": "",
@@ -550,7 +550,7 @@
     <script type="text/javascript">
         $(() => {
             heyzineDesign.load(flipbookcfg.design);
-            heyzine.load('https://cdnc.heyzine.com/files/uploaded/b46d69020f206566fb79572476af28ae4355b672.pdf', flipbookcfg).then(() => {				
+            heyzine.load('https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf', flipbookcfg).then(() => {				
                 heyzineDesign.afterLoad(flipbookcfg.design);
                 // initServiceWorker();
                 if (typeof app != 'undefined' && app != null && app.bus != null) {
