--- a/b46d69020f.html
+++ b/b46d69020f.html
@@ -9,19 +9,19 @@
 <meta name="google" content="notranslate">
 
 <link rel="preconnect" href="https://cdnc.heyzine.com">
-<link rel="canonical" href="https://heyzine.com/flip-book/2245c4c595.html">
+<link rel="canonical" href="https://heyzine.com/flip-book/ec4dca4a4d.html">
 
 <title>Online MENU</title>
-<meta itemprop="name" content="Online Flipbook">
-<meta itemprop="description" content="Created with the Heyzine flipbook maker">
+<meta itemprop="name" content="">
+<meta itemprop="description" content="">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Online Flipbook">
 <meta property="og:description" content="Created with the Heyzine flipbook maker">
-<meta property="og:url" content="https://heyzine.com/flip-book/2245c4c595.html">
-<link rel="alternate" type="application/json+oembed" href="https://heyzine.com/api1/oembed?url=https%3A%2F%2Fheyzine.com%2Fflip-book%2F2245c4c595.html&amp;format=json" title="Online Flipbook"><meta property="og:image" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
-<meta itemprop="image" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
+<meta property="og:url" content="https://heyzine.com/flip-book/ec4dca4a4d.html">
+<link rel="alternate" type="application/json+oembed" href="https://heyzine.com/api1/oembed?url=https%3A%2F%2Fheyzine.com%2Fflip-book%2Fec4dca4a4d.html&amp;format=json" title="Online Flipbook"><meta property="og:image" content="https://cdnc.heyzine.com/files/uploaded/ec4dca4a4df85da5faea3e9689d671bf45917325.pdf-thumb.jpg">
+<meta itemprop="image" content="https://cdnc.heyzine.com/files/uploaded/ec4dca4a4df85da5faea3e9689d671bf45917325.pdf-thumb.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image:src" content="https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg">
+<meta name="twitter:image:src" content="https://cdnc.heyzine.com/files/uploaded/ec4dca4a4df85da5faea3e9689d671bf45917325.pdf-thumb.jpg">
 <meta name="robots" content="index, nofollow">
 
 
@@ -38,27 +38,27 @@
 <script type="text/javascript">
     /*start-metadata*/
     var flipbookcfg={
-        "id": "f3336036ea06cd188f265642f587991f8cadea813",
+        "id": "b78261a11f4512ddf203d0b47f55e9990109280a3",
         "app_name": "metadata-app-name",
         "app_ver": "1",
-        "name": "2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf",
-        "custom_name": "2245c4c595.html",
+        "name": "ec4dca4a4df85da5faea3e9689d671bf45917325.pdf",
+        "custom_name": "ec4dca4a4d.html",
         "domain": "https:\/\/heyzine.com",
         "mode": "PDF",
         "isize": 1.59396,
         "width": 596,
         "height": 843,
-        "size": "733668",
+        "size": "6418242",
         "admin_key": "",
-        "url": "https:\/\/heyzine.com\/flip-book\/2245c4c595.html",
+        "url": "https:\/\/heyzine.com\/flip-book\/ec4dca4a4d.html",
         "cover": 0,
-        "num_pages": 4,
+        "num_pages": 11,
         "viewer": "MAGAZINE",
-        "thumbnail": "2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf-thumb.jpg",
+        "thumbnail": "ec4dca4a4df85da5faea3e9689d671bf45917325.pdf-thumb.jpg",
         "stats": 0,
         "readerToken": null,
         "design": {
-            "type": "magazine",                     
+            "type": "book",                     
             "background": "https:\/\/cdnc.heyzine.com\/files\/backgrounds\/back5.svg",
             "background_color": null,
             "background_style": "",
@@ -73,12 +73,12 @@
             "show_download": 0,
             "show_print": 0,
             "show_fullscreen": 1,
-            "show_text": 1,
+            "show_text": 0,
             "show_shadow": 1,
             "show_depth": 1,
             "show_edges": 1,
             "show_round": 0,
-            "show_binding": 0,
+            "show_binding": 1,
             "show_center": 1,
             "show_double": 0,
             "show_zoom": 0,
@@ -101,7 +101,7 @@
             "controls_size": null,
             "controls_style": null,      
             "sound_flip": 1        },
-        "layers": null,
+        "layers": [{"id":"0","type":"action","page":1,"page_end":null,"origin":"pdf","css":{"width":171.14357,"height":15.76324,"left":238.07085,"top":601.03022},"wrapper":{"width":595.5,"height":850.07996,"left":0,"top":0},"action":{"highlight":1,"target":"https:\/\/www.instagram.com\/olivas.pizzeria\/?hl=en","type":"link","subtype":null,"id_media":null,"extra":{"new_tab":"1","text":null}},"media":{"id_media":null,"url":null,"type":null,"options":{"display":"inline"}}},{"id":"1","type":"action","page":11,"page_end":null,"origin":"pdf","css":{"width":147.87404,"height":13.51142,"left":234.13951,"top":624.20996},"wrapper":{"width":595.5,"height":850.07996,"left":0,"top":0},"action":{"highlight":1,"target":"https:\/\/www.instagram.com\/olivas.pizzeria\/?hl=en","type":"link","subtype":null,"id_media":null,"extra":{"new_tab":"1","text":null}},"media":{"id_media":null,"url":null,"type":null,"options":{"display":"inline"}}}],
         "lead": null,
         "bookmark": {"list":[]}    };
     /*end-metadata*/
@@ -550,7 +550,7 @@
     <script type="text/javascript">
         $(() => {
             heyzineDesign.load(flipbookcfg.design);
-            heyzine.load('https://cdnc.heyzine.com/files/uploaded/2245c4c5955a408cb7c40ddb2c292f580b7e4e92.pdf', flipbookcfg).then(() => {				
+            heyzine.load('https://cdnc.heyzine.com/files/uploaded/ec4dca4a4df85da5faea3e9689d671bf45917325.pdf', flipbookcfg).then(() => {				
                 heyzineDesign.afterLoad(flipbookcfg.design);
                 // initServiceWorker();
                 if (typeof app != 'undefined' && app != null && app.bus != null) {
